--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,27 @@
-<p>login works!</p>
+<div class="container-sm offset-md-4">
+  <div class="row">
+    <div class="col">
+      <div class="card rounded" style=" margin: 50px; width: 18rem">
+        <div class="card-header">
+          <img src="assets/uAttendance.png" width="100" class="rounded-circle card-img-top" alt="" loading="lazy">
+        </div>
+        <div class="card-content">
+          <form #userLogin="ngForm" (ngSubmit)="log(userLogin)">
+            <div class="form-group">
+              <input type="email" class="form-control" id="inputName" name="nombre" #nombre="ngModel" [(ngModel)]="userLogger.nombre" aria-describedby="emailHelp" placeholder="Ingrese Nombre" autofocus>
+            </div>
+            <div class="form-group">
+              <input type="password" class="form-control" id="inputPass" name="contrasena" #contrasena="ngModel"
+                     [(ngModel)]="userLogger.contrasena" placeholder="Ingrese Contraseña">
+            </div>
+            <button type="submit" class="btn btn-primary btn-space" style="margin: 10px">Ingresar</button>
+            <button type="submit" class="btn btn-primary" style="margin: 5px">Ingresar por Imagen</button>
+          </form>
+          <div>
+            <button type="button" class="btn btn-light" routerLink="/registro">Registrarse</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
