feat: registry form

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -18,7 +18,7 @@
             <button type="submit" class="btn btn-primary" style="margin: 5px">Ingresar por Imagen</button>
           </form>
           <div>
-            <button type="button" class="btn btn-light" routerLink="/registro">Registrarse</button>
+            <button type="button" class="btn btn-light" routerLink="/registry">Registrarse</button>
           </div>
         </div>
       </div>
