--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -12,7 +12,7 @@
         <a class="nav-link" href="/students">Estudiantes</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/asists">Asistencias</a>
+        <a class="nav-link" href="/assits">Asistencias</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/groups">Fotos Grupales</a>
@@ -24,5 +24,3 @@
     </form>
   </div>
 </nav>
-
-<router-outlet></router-outlet>
