--- a/src/app/components/students/students.component.html
+++ b/src/app/components/students/students.component.html
@@ -28,45 +28,17 @@
     <div class="col-sm-9">
       <div class="container-sm">
         <div class="row row-cols-sm-2 row-cols-md-4">
-          <div class="col">
+          <div *ngFor="let student of students" class="col">
             <div class="card">
-              <img src="..." class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <img src="{{student.url}}" class="card-img-top">
               </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card">
-              <img src="..." class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card">
-              <img src="..." class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card">
-              <img src="..." class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <div class="card-footer">
+                <h4>{{student.nombre}}</h4>
               </div>
             </div>
           </div>
         </div>
-
-
       </div>
     </div>
   </div>
