--- a/src/app/components/students/students.component.html
+++ b/src/app/components/students/students.component.html
@@ -1,9 +1,37 @@
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="/home">
+    <img src="assets/uAttendance.png" style="width: 100px" class="rounded-circle card-img-top" alt="" loading="lazy">
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <li class="nav-item">
+        <a class="nav-link" href="/students">Estudiantes</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/assits">Asistencias</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/groups">Fotos Grupales</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Buscar">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+    </form>
+  </div>
+</nav>
+
+
 <div class="container-sm">
   <div class="row">
     <div class="col-sm-3">
       <div class="card rounded" style=" margin: 10px; width: 15rem">
         <div class="card-header">
-          <img src="assets/uAttendance.png" width="100" class="rounded-circle card-img-top" alt="" loading="lazy">
+          <img src="assets/student.jpg" width="100" class="rounded-circle card-img-top" alt="" loading="lazy">
         </div>
         <div class="card-content">
           <form #userRegistrer="ngForm">
