--- a/src/app/components/groups/groups.component.html
+++ b/src/app/components/groups/groups.component.html
@@ -1,8 +1,22 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="/home">
-    <img src="assets/uAttendance.png" style="width: 100px" class="rounded-circle card-img-top" alt="" loading="lazy">
+    <img
+      src="assets/uAttendance.png"
+      style="width: 100px"
+      class="rounded-circle card-img-top"
+      alt=""
+      loading="lazy"
+    />
   </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarTogglerDemo02"
+    aria-controls="navbarTogglerDemo02"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
     <span class="navbar-toggler-icon"></span>
   </button>
 
@@ -19,8 +33,57 @@
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Buscar">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+      <input class="form-control mr-sm-2" type="search" placeholder="Buscar" />
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+        Buscar
+      </button>
     </form>
   </div>
 </nav>
+
+<div class="container my-2">
+  <div class="row">
+    <div class="col-sm-4">
+      <div class="card">
+        <div class="card-body text-center">
+          <h5 class="card-title">Asistencia</h5>
+          <div class="border my-2">
+            <img [src]="currentGroupImage" class="img-fluid" />
+          </div>
+          <input
+            class="m-1"
+            type="file"
+            (change)="onImageSelect($event)"
+            accept="image/x-png"
+          />
+          <ngb-datepicker
+            class="m-1"
+            #dp
+            [(ngModel)]="model"
+            (navigate)="date = $event.next"
+          ></ngb-datepicker>
+
+          <button
+            type="button"
+            class="btn btn-primary btn-lg m-1"
+            (click)="addGroupImage()"
+          >
+            Agregar
+          </button>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-8">
+      <div class="d-flex flex-wrap">
+        <div class="card m-2" *ngFor="let assistance of assistances">
+          <div class="card-body text-center">
+            <h5 class="card-title">{{ assistance.name }}</h5>
+            <div class="border my-2">
+              <img [src]="assistance.photo" class="img-fluid" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
