--- a/src/app/components/assits/assits.component.html
+++ b/src/app/components/assits/assits.component.html
@@ -1,8 +1,22 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="/home">
-    <img src="assets/uAttendance.png" style="width: 100px" class="rounded-circle card-img-top" alt="" loading="lazy">
+    <img
+      src="assets/uAttendance.png"
+      style="width: 100px"
+      class="rounded-circle card-img-top"
+      alt=""
+      loading="lazy"
+    />
   </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarTogglerDemo02"
+    aria-controls="navbarTogglerDemo02"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
     <span class="navbar-toggler-icon"></span>
   </button>
 
@@ -18,9 +32,91 @@
         <a class="nav-link" href="/groups">Fotos Grupales</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Buscar">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
-    </form>
   </div>
 </nav>
+
+<div class="container my-5">
+  <div class="row text-center">
+    <div class="col">
+      <div class="spinner-grow text-primary" role="status" *ngIf="gettingData">
+        <span class="sr-only">Loading...</span>
+      </div>
+    </div>
+  </div>
+
+  <div class="row m-5" *ngFor="let assistsDetail of assistsDetails">
+    <div class="col">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Asistencia</h5>
+          <h6 class="card-subtitle mb-2 text-muted">
+            {{ assistsDetail.assist }}
+          </h6>
+          <div class="border my-2">
+            <img
+              [src]="assistsDetail.image"
+              class="img-fluid"
+              *ngIf="assistsDetail.show"
+            />
+            <button
+              type="button"
+              class="btn btn-primary m-2"
+              *ngIf="!assistsDetail.show"
+              (click)="assistsDetail.show = true"
+            >
+              Ver imagen
+            </button>
+            <button
+              type="button"
+              class="btn btn-danger m-2"
+              *ngIf="assistsDetail.show"
+              (click)="assistsDetail.show = false"
+            >
+              Cerrar imagen
+            </button>
+          </div>
+          <div class="table-responsive">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">Estudiante</th>
+                  <th scope="col">Imagen</th>
+                  <th scope="col">Asistió</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let student of assistsDetail.students">
+                  <td>{{ student.student }}</td>
+                  <td>
+                    <img
+                      [src]="student.image"
+                      class="img-fluid"
+                      *ngIf="student.show"
+                    />
+                    <button
+                      type="button"
+                      class="btn btn-primary m-2"
+                      *ngIf="!student.show"
+                      (click)="student.show = true"
+                    >
+                      Ver imagen
+                    </button>
+                    <button
+                      type="button"
+                      class="btn btn-danger m-2"
+                      *ngIf="student.show"
+                      (click)="student.show = false"
+                    >
+                      Cerrar imagen
+                    </button>
+                  </td>
+                  <td>{{ student.present === 1 ? "Si" : "No" }}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
