--- a/src/app/components/students/students.component.html
+++ b/src/app/components/students/students.component.html
@@ -1,8 +1,22 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="/home">
-    <img src="assets/uAttendance.png" style="width: 100px" class="rounded-circle card-img-top" alt="" loading="lazy">
+    <img
+      src="assets/uAttendance.png"
+      style="width: 100px"
+      class="rounded-circle card-img-top"
+      alt=""
+      loading="lazy"
+    />
   </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarTogglerDemo02"
+    aria-controls="navbarTogglerDemo02"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
     <span class="navbar-toggler-icon"></span>
   </button>
 
@@ -18,35 +32,57 @@
         <a class="nav-link" href="/groups">Fotos Grupales</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Buscar">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
-    </form>
   </div>
 </nav>
-
 
 <div class="container-sm">
   <div class="row">
     <div class="col-sm-3">
-      <div class="card rounded" style=" margin: 10px; width: 15rem">
+      <div class="card rounded" style="margin: 10px; width: 15rem">
         <div class="card-header">
-          <img src="assets/student.jpg" width="100" class="rounded-circle card-img-top" alt="" loading="lazy">
+          <img
+            src="assets/student.jpg"
+            width="100"
+            class="rounded-circle card-img-top"
+            alt=""
+            loading="lazy"
+          />
         </div>
         <div class="card-content">
           <form #userRegistrer="ngForm">
             <div class="form-group">
-              <input type="email" class="form-control" id="inputName" name="nombre" #nombre="ngModel" [(ngModel)]="student.nombre" aria-describedby="emailHelp" placeholder="Ingrese Nombre Estudiante" autofocus>
+              <input
+                type="email"
+                class="form-control"
+                id="inputName"
+                name="nombre"
+                #nombre="ngModel"
+                [(ngModel)]="student.nombre"
+                aria-describedby="emailHelp"
+                placeholder="Ingrese Nombre Estudiante"
+                autofocus
+              />
             </div>
             <div class="card">
               <div class="card-body">
                 <input
                   accept=".png"
                   style="display: none"
-                  type="file" (change)="onFileChanged($event)"
-                  #fileInput>
-                <button class="btn btn-success" (click)="fileInput.click()">Select File</button>
-                <button type="submit" class="btn btn-primary" style="margin-left: 10px" (click)="regitrar(userRegistrer)">Registrar</button>
+                  type="file"
+                  (change)="onFileChanged($event)"
+                  #fileInput
+                />
+                <button class="btn btn-success" (click)="fileInput.click()">
+                  Select File
+                </button>
+                <button
+                  type="submit"
+                  class="btn btn-primary"
+                  style="margin-left: 10px"
+                  (click)="regitrar(userRegistrer)"
+                >
+                  Registrar
+                </button>
               </div>
             </div>
           </form>
@@ -54,15 +90,19 @@
       </div>
     </div>
     <div class="col-sm-9">
-      <div class="container-sm">
+      <div class="container-sm my-2">
         <div class="row row-cols-sm-2 row-cols-md-4">
           <div *ngFor="let student of students" class="col">
             <div class="card">
               <div class="card-body">
-                <img src="{{student.url}}" class="card-img-top">
+                <img
+                  src="{{ student.url }}"
+                  class="card-img-top img-fluid"
+                  style="height: 10vh"
+                />
               </div>
               <div class="card-footer">
-                <h4>{{student.nombre}}</h4>
+                <h4>{{ student.nombre }}</h4>
               </div>
             </div>
           </div>
